versions/v3.6.0/build/dts/api/bindings/sensor/st,lps22df-i2c.md
---
version: v3.6.0
source_url: https://docs.zephyrproject.org/3.6.0/build/dts/api/bindings/sensor/st,lps22df-i2c.html
original_path: build/dts/api/bindings/sensor/st,lps22df-i2c.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down menu on the left and select the desired version.

# st,lps22df (on i2c bus)

Vendor: [STMicroelectronics](../../bindings.md#dt-vendor-st)

## Description

```text
STMicroelectronics LPS22DF pressure and temperature sensor connected to I2C
bus
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `supply-gpios` | `phandle-array` | ```text GPIO specifier that controls power to the device.  This property should be provided when the device has a dedicated switch that controls power to the device.  The supply state is entirely the responsibility of the device driver.  Contrast with vin-supply. ``` |
| `vin-supply` | `phandle` | ```text Reference to the regulator that controls power to the device. The referenced devicetree node must have a regulator compatible.  This property should be provided when device power is supplied by a shared regulator.  The supply state is dependent on the request status of all devices fed by the regulator.  Contrast with supply-gpios.  If both properties are provided then the regulator must be requested before the supply GPIOS is set to an active state, and the supply GPIOS must be set to an inactive state before releasing the regulator. ``` |
| `drdy-gpios` | `phandle-array` | ```text DRDY pin  This pin defaults to active high when produced by the sensor. The property value should ensure the flags properly describe the signal that is presented to the driver. ``` |
| `drdy-pulsed` | `boolean` | ```text Selects the pulsed mode for data-ready interrupt when enabled, and the latched mode when disabled. ``` |
| `odr` | `int` | ```text Specify the output data rate expressed in samples per second (Hz). The default is the power-on reset value.  - 0 # LPS2xDF_DT_ODR_POWER_DOWN - 1 # LPS2xDF_DT_ODR_1HZ - 2 # LPS2xDF_DT_ODR_4HZ - 3 # LPS2xDF_DT_ODR_10HZ - 4 # LPS2xDF_DT_ODR_25HZ - 5 # LPS2xDF_DT_ODR_50HZ - 6 # LPS2xDF_DT_ODR_75HZ - 7 # LPS2xDF_DT_ODR_100HZ - 8 # LPS2xDF_DT_ODR_200HZ ```  Legal values: `0`, `1`, `2`, `3`, `4`, `5`, `6`, `7`, `8` |
| `lpf` | `int` | ```text Specify the low pass filter value to be applied to pressure data. The default is the power-on reset value.  - 0 # LPS2xDF_DT_LP_FILTER_OFF - 1 # LPS2xDF_DT_LP_FILTER_ODR_4 - 3 # LPS2xDF_DT_LP_FILTER_ODR_9 ```  Legal values: `0`, `1`, `3` |
| `avg` | `int` | ```text Specify the average filter value (i.e. number of samples) to be applied to pressure and temperature data. The default is the power-on reset value.  - 0 # LPS2xDF_DT_AVG_4_SAMPLES - 1 # LPS2xDF_DT_AVG_8_SAMPLES - 2 # LPS2xDF_DT_AVG_16_SAMPLES - 3 # LPS2xDF_DT_AVG_32_SAMPLES - 4 # LPS2xDF_DT_AVG_64_SAMPLES - 5 # LPS2xDF_DT_AVG_128_SAMPLES - 6 # LPS2xDF_DT_AVG_256_SAMPLES - 7 # LPS2xDF_DT_AVG_512_SAMPLES ```  Legal values: `0`, `1`, `2`, `3`, `4`, `5`, `6`, `7` |
| `friendly-name` | `string` | ```text Human readable string describing the sensor. It can be used to distinguish multiple instances of the same model (e.g., lid accelerometer vs. base accelerometer in a laptop) to a host operating system.  This property is defined in the Generic Sensor Property Usages of the HID Usage Tables specification (https://usb.org/sites/default/files/hut1_3_0.pdf, section 22.5). ``` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “st,lps22df” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `reg` | `array` | ```text device address on i2c bus ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
